Fix crash on startup with MySQL 5.5. Thanks to Bartosz Fabianowski for figuring out the cause.

BUG: 231166