src/core-implementations/collections/sqlcollection/mysqlecollection/MySqlEmbeddedStorage.cpp
@@ -68,20 +68,19 @@ MySqlEmbeddedStorage::MySqlEmbeddedStorage( const QString &storageLocation )
         dir.mkpath( "." );
     }
 
-    static const int num_elements = 10;
+    static const int num_elements = 9;
     char **server_options = new char* [ num_elements + 1 ];
     server_options[0] = const_cast<char*>( "amarokmysqld" );
     server_options[1] = defaultsLine;
     server_options[2] = databaseLine;
     // CAUTION: if we ever change the table type we will need to fix a number of MYISAM specific
     // functions, such as FULLTEXT indexing.
-    server_options[3] = const_cast<char*>( "--default-table-type=MYISAM" );
-    server_options[4] = const_cast<char*>( "--default-storage-engine=MYISAM" );
-    server_options[5] = const_cast<char*>( "--loose-skip-innodb" );
-    server_options[6] = const_cast<char*>( "--skip-grant-tables" );
-    server_options[7] = const_cast<char*>( "--myisam-recover=FORCE" );
-    server_options[8] = const_cast<char*>( "--character-set-server=utf8" );
-    server_options[9] = const_cast<char*>( "--collation-server=utf8_bin" );
+    server_options[3] = const_cast<char*>( "--default-storage-engine=MYISAM" );
+    server_options[4] = const_cast<char*>( "--loose-skip-innodb" );
+    server_options[5] = const_cast<char*>( "--skip-grant-tables" );
+    server_options[6] = const_cast<char*>( "--myisam-recover=FORCE" );
+    server_options[7] = const_cast<char*>( "--character-set-server=utf8" );
+    server_options[8] = const_cast<char*>( "--collation-server=utf8_bin" );
     server_options[num_elements] = 0;
 
     char **server_groups = new char* [ 3 ];
